@@ -1,3 +1,7 @@
+2006-01-14  Pierre Chifflier  <pollux@wzdftpd.net>
+
+	* feature: add option to disable mysql or pgsql at configure time
+
 2006-01-11  Pierre Chifflier  <pollux@wzdftpd.net>
 
 	* feature: enable MLST/MLSD by default
